# masters_project

./: .gitignore  README.md  config.yaml  pyproject.toml
benchmark/: benchmark.yml
multi_agent_system/: main.py  pyproject.toml
multi_agent_system/src/multi_agent_system/: cli.py
multi_agent_system/src/multi_agent_system/agents/aggregate/: aggregate_agent.py
multi_agent_system/src/multi_agent_system/agents/breakdown/: breakdown_agent.py  breakdown_config.py  breakdown_mcp.py  breakdown_tools.py  breakdown_tools_WOpheval.py
multi_agent_system/src/multi_agent_system/agents/grounding/: grounding_tools.py
multi_agent_system/src/multi_agent_system/prompts/: gene_request.jinja2
multi_agent_system/tests/: pytest_breakdown_tools.py  test_breakdown.py
multi_agent_system_2/: main.py
phenopackets/: Fregeau-2016-RERE-Subject_1.json
results/: results.yml
results/pheval_disease_results/: Abdul_Wahab-2016-GCDH-Patient_5-disease_result.parquet  Fregeau-2016-RERE-Subject_1-disease_result.parquet
results/raw_results/: Abdul_Wahab-2016-GCDH-Patient_5-agents.tsv  Fregeau-2016-RERE-Subject_1-agents.tsv
src/multi_agent_system/: cli.py  runner.py
src/multi_agent_system/agents/breakdown/: breakdown_agent.py  breakdown_config.py  breakdown_evals.py  breakdown_mcp.py  breakdown_tools.py  shared_dependencies.py
src/multi_agent_system/agents/cross-reference/: cross-reference_tools.py
src/multi_agent_system/agents/grounding/: grounding_agent.py  grounding_config.py  grounding_mcp.py  grounding_tools.py
src/multi_agent_system/agents/similarity_scoring/: similarity_agent.py  similarity_config.py  similarity_mcp.py  similarity_tools.py
src/multi_agent_system/evaluators/: metadata.py  substring_eval.py
src/multi_agent_system/post_process/: post_process.py
src/multi_agent_system/prompts/: diagnosis_prompt.jinja2  gene_request2.jinja2
src/multi_agent_system/scripts/: mondo_index.py
src/multi_agent_system/utils/: __init__.py  batching_utils.py  grounding_utils.py  utils.py
