[tool.poetry]
name = "multi-agent-system"
version = "0.1.0"
description = "diagnostic reasoning mutli-agent system for rare disease diagnostic using LLM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "multi_agent_system", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.0"
gradio = "^5.30.0"
oaklib = "^0.6.22"
pydantic-ai = {extras = ["logfire"], version = "^0.2.7"}
mcp = {version = "^1.9.0", extras = ["cli"]}
polars = "^1.29.0"
jinja2 = "^3.1.6"
ollama = "^0.4.8"
pydantic-ai-slim = {extras = ["openai"], version = "^0.2.7"}

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

