[tool.poetry]
name = "multi-agent-system"
version = "0.1.0"
description = "diagnostic reasoning mutli-agent system for rare disease diagnostic using LLM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "multi_agent_system", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.0"
gradio = "^5.30.0"
oaklib = "^0.6.22"
mcp = {version = "^1.9.0", extras = ["cli"]}
polars = "^1.29.0"
jinja2 = "^3.1.6"
ollama = "^0.4.8"
pydantic-settings = "^2.9.1"
pydantic-ai = "^0.4.4"
pheval = "^0.5.7"
sentence-transformers = "^4.1.0"
faiss-cpu = "^1.11.0"
einops = "^0.8.1"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
breakdown_agent = "multi_agent_system.cli:run_agent"
grounding_agent = "multi_agent_system.cli:run_grounding_agent"
agents = "multi_agent_system.cli:cli"